--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "city" : "Shenzhen",
     "country" : "CN",
-    "appid" : "0984298aa8d4de5f04f6679284989cf4"
+    "weather_appid" : "0984298aa8d4de5f04f6679284989cf4",
+    "tts_key" : "76fcb33e6fc34b2083d8793ee14a2f6b"
 }
